crates/sui-graphql-macros/tests/compile/missing_field_path_attr.stderr
error: Unexpected meta-item format `literal`
 --> tests/compile/missing_field_path_attr.rs:7:13
  |
7 |     #[field("object.address")]
  |             ^^^^^^^^^^^^^^^^
